--- a/plugins/mapper/dialogs/dlgmapspeedwalkbase.ui
+++ b/plugins/mapper/dialogs/dlgmapspeedwalkbase.ui
@@ -1,197 +1,188 @@
-<ui version="4.0" stdsetdef="1" >
-  <author></author>
-  <comment></comment>
-  <exportmacro></exportmacro>
-  <class>DlgMapSpeedwalkBase</class>
-  <customwidgets> 
-    <customwidget> 
-      <class>KNumInput</class> 
-      <extends>QWidget</extends> 
-      <header>knuminput.h</header> 
-      <container>0</container> 
-      <pixmap></pixmap> 
-    </customwidget> 
-    <customwidget> 
-      <class>KIntNumInput</class> 
-      <extends>KNumInput</extends> 
-      <header>knuminput.h</header> 
-      <container>0</container> 
-      <pixmap></pixmap> 
-    </customwidget> 
-  </customwidgets>
-  <widget class="QWidget" name="DlgMapSpeedwalkBase" >
-    <property name="geometry" >
-      <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>588</width>
-        <height>480</height>
-      </rect>
-    </property>
-    <property name="windowTitle" >
-      <string>Speedwalk Options</string>
-    </property>
-    <layout class="QVBoxLayout" >
-      <property name="margin" >
-        <number>11</number>
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
+ <class>DlgMapSpeedwalkBase</class>
+ <widget class="QWidget" name="DlgMapSpeedwalkBase">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>588</width>
+    <height>480</height>
+   </rect>
+  </property>
+  <property name="windowTitle">
+   <string>Speedwalk Options</string>
+  </property>
+  <layout class="QVBoxLayout">
+   <property name="spacing">
+    <number>6</number>
+   </property>
+   <property name="margin">
+    <number>11</number>
+   </property>
+   <item>
+    <widget class="QGroupBox" name="fraLimit">
+     <property name="title">
+      <string>Limit Speedwalk Moves</string>
+     </property>
+     <layout class="QVBoxLayout">
+      <property name="spacing">
+       <number>6</number>
       </property>
-      <property name="spacing" >
-        <number>6</number>
+      <property name="margin">
+       <number>11</number>
       </property>
       <item>
-        <widget class="Q3GroupBox" name="fraLimit" >
-          <property name="title" >
-            <string>Limit Speedwalk Moves</string>
-          </property>
-          <layout class="QVBoxLayout" >
-            <property name="margin" >
-              <number>11</number>
-            </property>
-            <property name="spacing" >
-              <number>6</number>
-            </property>
-            <item>
-              <widget class="QCheckBox" name="chkLimitSpeedwalk" >
-                <property name="text" >
-                  <string>Limit speedwalk moves</string>
-                </property>
-              </widget>
-            </item>
-            <item>
-              <layout class="QHBoxLayout" >
-                <property name="margin" >
-                  <number>0</number>
-                </property>
-                <property name="spacing" >
-                  <number>6</number>
-                </property>
-                <item>
-                  <widget class="QLabel" name="lblLimitSpeedwalk" >
-                    <property name="text" >
-                      <string>Number of moves before aborting:</string>
-                    </property>
-                    <property name="wordWrap" >
-                      <bool>false</bool>
-                    </property>
-                  </widget>
-                </item>
-                <item>
-                  <widget class="KIntNumInput" name="txtAbortCount" >
-                    <property name="sizePolicy" >
-                      <sizepolicy>
-                        <hsizetype>1</hsizetype>
-                        <vsizetype>0</vsizetype>
-                      </sizepolicy>
-                    </property>
-                    <property name="minimumSize" >
-                      <size>
-                        <width>100</width>
-                        <height>0</height>
-                      </size>
-                    </property>
-                    <property name="maximumSize" >
-                      <size>
-                        <width>90</width>
-                        <height>32767</height>
-                      </size>
-                    </property>
-                  </widget>
-                </item>
-                <item>
-                  <spacer name="Spacer5" >
-                    <property name="sizeHint" >
-                      <size>
-                        <width>20</width>
-                        <height>20</height>
-                      </size>
-                    </property>
-                    <property name="sizeType" >
-                      <enum>QSizePolicy::Expanding</enum>
-                    </property>
-                    <property name="orientation" >
-                      <enum>Qt::Horizontal</enum>
-                    </property>
-                  </spacer>
-                </item>
-              </layout>
-            </item>
-          </layout>
-        </widget>
+       <widget class="QCheckBox" name="chkLimitSpeedwalk">
+        <property name="text">
+         <string>Limit speedwalk moves</string>
+        </property>
+       </widget>
       </item>
       <item>
-        <widget class="Q3GroupBox" name="fraDelay" >
-          <property name="title" >
-            <string>Delay Speedwalk Moves</string>
+       <layout class="QHBoxLayout">
+        <property name="spacing">
+         <number>6</number>
+        </property>
+        <property name="margin">
+         <number>0</number>
+        </property>
+        <item>
+         <widget class="QLabel" name="lblLimitSpeedwalk">
+          <property name="text">
+           <string>Number of moves before aborting:</string>
           </property>
-          <layout class="QHBoxLayout" >
-            <property name="margin" >
-              <number>11</number>
-            </property>
-            <property name="spacing" >
-              <number>6</number>
-            </property>
-            <item>
-              <widget class="QLabel" name="lblDelay" >
-                <property name="text" >
-                  <string>Delay before sending next command (centi secconds)</string>
-                </property>
-                <property name="wordWrap" >
-                  <bool>false</bool>
-                </property>
-              </widget>
-            </item>
-            <item>
-              <widget class="KIntNumInput" name="txtDelay" >
-                <property name="minimumSize" >
-                  <size>
-                    <width>100</width>
-                    <height>0</height>
-                  </size>
-                </property>
-                <property name="maximumSize" >
-                  <size>
-                    <width>90</width>
-                    <height>32767</height>
-                  </size>
-                </property>
-              </widget>
-            </item>
-            <item>
-              <spacer name="Spacer8" >
-                <property name="sizeHint" >
-                  <size>
-                    <width>20</width>
-                    <height>20</height>
-                  </size>
-                </property>
-                <property name="sizeType" >
-                  <enum>QSizePolicy::Expanding</enum>
-                </property>
-                <property name="orientation" >
-                  <enum>Qt::Horizontal</enum>
-                </property>
-              </spacer>
-            </item>
-          </layout>
-        </widget>
+          <property name="wordWrap">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="KIntNumInput" name="txtAbortCount">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>100</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>90</width>
+            <height>32767</height>
+           </size>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="Spacer5">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Expanding</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="fraDelay">
+     <property name="title">
+      <string>Delay Speedwalk Moves</string>
+     </property>
+     <layout class="QHBoxLayout">
+      <property name="spacing">
+       <number>6</number>
+      </property>
+      <property name="margin">
+       <number>11</number>
+      </property>
+      <item>
+       <widget class="QLabel" name="lblDelay">
+        <property name="text">
+         <string>Delay before sending next command (centi secconds)</string>
+        </property>
+        <property name="wordWrap">
+         <bool>false</bool>
+        </property>
+       </widget>
       </item>
       <item>
-        <spacer name="Spacer3" >
-          <property name="sizeHint" >
-            <size>
-              <width>20</width>
-              <height>20</height>
-            </size>
-          </property>
-          <property name="sizeType" >
-            <enum>QSizePolicy::Expanding</enum>
-          </property>
-          <property name="orientation" >
-            <enum>Qt::Vertical</enum>
-          </property>
-        </spacer>
+       <widget class="KIntNumInput" name="txtDelay">
+        <property name="minimumSize">
+         <size>
+          <width>100</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>90</width>
+          <height>32767</height>
+         </size>
+        </property>
+       </widget>
       </item>
-    </layout>
-  </widget>
-  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+      <item>
+       <spacer name="Spacer8">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Expanding</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <spacer name="Spacer3">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Expanding</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+  </layout>
+ </widget>
+ <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+ <customwidgets>
+  <customwidget>
+   <class>KIntNumInput</class>
+   <extends>QWidget</extends>
+   <header>knuminput.h</header>
+  </customwidget>
+ </customwidgets>
+ <resources/>
+ <connections/>
 </ui>
