--- a/plugins/mapper/plugins/speedwalk/dlgmapspeedwalklistbase.ui
+++ b/plugins/mapper/plugins/speedwalk/dlgmapspeedwalklistbase.ui
@@ -1,282 +1,339 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ui version="4.0" stdsetdef="1">
-  <author></author>
-  <comment></comment>
-  <exportmacro></exportmacro>
-  <class>DlgMapSpeedwalkListBase</class>
-  <widget class="QWidget" name="DlgMapSpeedwalkListBase">
-    <property name="geometry">
-      <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>226</width>
-        <height>337</height>
-      </rect>
-    </property>
-    <property name="sizePolicy">
-      <sizepolicy>
-        <hsizetype>7</hsizetype>
-        <vsizetype>7</vsizetype>
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-      </sizepolicy>
-    </property>
-    <property name="windowTitle">
-      <string>Speedwalk List</string>
-    </property>
-    <layout class="QGridLayout">
-      <property name="margin">
-        <number>11</number>
-      </property>
-      <property name="spacing">
-        <number>6</number>
-      </property>
-      <item row="0" column="0">
-        <layout class="QHBoxLayout">
-          <property name="margin">
-            <number>0</number>
-          </property>
-          <property name="spacing">
-            <number>6</number>
-          </property>
-          <item>
-            <widget class="QLabel" name="m_lblCatogerize">
-              <property name="sizePolicy">
-                <sizepolicy>
-                  <hsizetype>4</hsizetype>
-                  <vsizetype>1</vsizetype>
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                </sizepolicy>
-              </property>
-              <property name="minimumSize">
-                <size>
-                  <width>60</width>
-                  <height>0</height>
-                </size>
-              </property>
-              <property name="text">
-                <string>Categorize:</string>
-              </property>
-              <property name="wordWrap">
-                <bool>false</bool>
-              </property>
-            </widget>
-          </item>
-          <item>
-            <widget class="QComboBox" name="m_cboCategorize">
-              <property name="sizePolicy">
-                <sizepolicy>
-                  <hsizetype>1</hsizetype>
-                  <vsizetype>0</vsizetype>
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                </sizepolicy>
-              </property>
-              <property name="minimumSize">
-                <size>
-                  <width>110</width>
-                  <height>0</height>
-                </size>
-              </property>
-              <property name="insertPolicy">
-                <enum>QComboBox::InsertAtTop</enum>
-              </property>
-              <item>
-                <property name="text">
-                  <string>Room</string>
-                </property>
-              </item>
-              <item>
-                <property name="text">
-                  <string>Zone/Room</string>
-                </property>
-              </item>
-              <item>
-                <property name="text">
-                  <string>Zone/Level/Room</string>
-                </property>
-              </item>
-            </widget>
-          </item>
-        </layout>
-      </item>
-      <item row="1" column="0">
-        <widget class="Q3ListView" name="m_lstSpeedwalk">
-          <property name="sizePolicy">
-            <sizepolicy>
-              <hsizetype>7</hsizetype>
-              <vsizetype>7</vsizetype>
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-            </sizepolicy>
-          </property>
-          <property name="vScrollBarMode">
-            <enum>Q3ScrollView::Auto</enum>
-          </property>
-          <property name="hScrollBarMode">
-            <enum>Q3ScrollView::Auto</enum>
-          </property>
-          <column>
-            <property name="text">
-              <string>Locations</string>
-            </property>
-            <property name="clickable">
-              <bool>true</bool>
-            </property>
-            <property name="resizable">
-              <bool>true</bool>
-            </property>
-          </column>
-        </widget>
-      </item>
-      <item row="2" column="0">
-        <layout class="QHBoxLayout">
-          <property name="margin">
-            <number>0</number>
-          </property>
-          <property name="spacing">
-            <number>6</number>
-          </property>
-          <item>
-            <widget class="QPushButton" name="m_cmdDelete">
-              <property name="sizePolicy">
-                <sizepolicy>
-                  <hsizetype>4</hsizetype>
-                  <vsizetype>0</vsizetype>
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                </sizepolicy>
-              </property>
-              <property name="minimumSize">
-                <size>
-                  <width>40</width>
-                  <height>30</height>
-                </size>
-              </property>
-              <property name="maximumSize">
-                <size>
-                  <width>40</width>
-                  <height>30</height>
-                </size>
-              </property>
-              <property name="text">
-                <string/>
-              </property>
-            </widget>
-          </item>
-          <item>
-            <widget class="QPushButton" name="m_cmdProperties">
-              <property name="sizePolicy">
-                <sizepolicy>
-                  <hsizetype>4</hsizetype>
-                  <vsizetype>0</vsizetype>
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                </sizepolicy>
-              </property>
-              <property name="minimumSize">
-                <size>
-                  <width>40</width>
-                  <height>30</height>
-                </size>
-              </property>
-              <property name="maximumSize">
-                <size>
-                  <width>40</width>
-                  <height>30</height>
-                </size>
-              </property>
-              <property name="text">
-                <string/>
-              </property>
-            </widget>
-          </item>
-          <item>
-            <widget class="QPushButton" name="m_cmdSpeedwalk">
-              <property name="sizePolicy">
-                <sizepolicy>
-                  <hsizetype>4</hsizetype>
-                  <vsizetype>0</vsizetype>
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                </sizepolicy>
-              </property>
-              <property name="minimumSize">
-                <size>
-                  <width>40</width>
-                  <height>30</height>
-                </size>
-              </property>
-              <property name="maximumSize">
-                <size>
-                  <width>40</width>
-                  <height>40</height>
-                </size>
-              </property>
-              <property name="text">
-                <string/>
-              </property>
-            </widget>
-          </item>
-          <item>
-            <spacer name="Spacer1">
-              <property name="sizeHint">
-                <size>
-                  <width>20</width>
-                  <height>20</height>
-                </size>
-              </property>
-              <property name="sizeType">
-                <enum>QSizePolicy::Expanding</enum>
-              </property>
-              <property name="orientation">
-                <enum>Qt::Horizontal</enum>
-              </property>
-            </spacer>
-          </item>
-        </layout>
-      </item>
+<ui version="4.0">
+ <class>DlgMapSpeedwalkListBase</class>
+ <widget class="QWidget" name="DlgMapSpeedwalkListBase">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>315</width>
+    <height>415</height>
+   </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="windowTitle">
+   <string>Speedwalk List</string>
+  </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="spacing">
+    <number>6</number>
+   </property>
+   <property name="margin">
+    <number>11</number>
+   </property>
+   <item>
+    <layout class="QHBoxLayout">
+     <property name="spacing">
+      <number>6</number>
+     </property>
+     <property name="margin">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="QLabel" name="m_lblCatogerize">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>60</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Categorize:</string>
+       </property>
+       <property name="wordWrap">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="m_cboCategorize">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>110</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="insertPolicy">
+        <enum>QComboBox::InsertAtTop</enum>
+       </property>
+       <item>
+        <property name="text">
+         <string>Room</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Zone/Room</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Zone/Level/Room</string>
+        </property>
+       </item>
+      </widget>
+     </item>
     </layout>
-  </widget>
-  <layoutdefault spacing="6" margin="11"/>
-  <pixmapfunction>Icon</pixmapfunction>
-  <connections>
-    <connection>
-      <sender>m_cmdProperties</sender>
-      <signal>clicked()</signal>
-      <receiver>DlgMapSpeedwalkListBase</receiver>
-      <slot>slotProperties()</slot>
-    </connection>
-    <connection>
-      <sender>m_cmdSpeedwalk</sender>
-      <signal>clicked()</signal>
-      <receiver>DlgMapSpeedwalkListBase</receiver>
-      <slot>slotWalk()</slot>
-    </connection>
-    <connection>
-      <sender>m_cmdDelete</sender>
-      <signal>clicked()</signal>
-      <receiver>DlgMapSpeedwalkListBase</receiver>
-      <slot>slotDelete()</slot>
-    </connection>
-    <connection>
-      <sender>m_lstSpeedwalk</sender>
-      <signal>doubleClicked(Q3ListViewItem*)</signal>
-      <receiver>DlgMapSpeedwalkListBase</receiver>
-      <slot>slotDoubleClicked(Q3ListViewItem*)</slot>
-    </connection>
-    <connection>
-      <sender>m_lstSpeedwalk</sender>
-      <signal>rightButtonClicked(Q3ListViewItem*,QPoint,int)</signal>
-      <receiver>DlgMapSpeedwalkListBase</receiver>
-      <slot>slotRightButtonClicked(Q3ListViewItem*,QPoint,int)</slot>
-    </connection>
-    <connection>
-      <sender>m_cboCategorize</sender>
-      <signal>activated(int)</signal>
-      <receiver>DlgMapSpeedwalkListBase</receiver>
-      <slot>slotCatogryChanged(int)</slot>
-    </connection>
-  </connections>
+   </item>
+   <item>
+    <widget class="Q3ListView" name="m_lstSpeedwalk">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="vScrollBarMode">
+      <enum>Q3ScrollView::Auto</enum>
+     </property>
+     <property name="hScrollBarMode">
+      <enum>Q3ScrollView::Auto</enum>
+     </property>
+     <column>
+      <property name="text">
+       <string>Locations</string>
+      </property>
+      <property name="clickable">
+       <bool>true</bool>
+      </property>
+      <property name="resizable">
+       <bool>true</bool>
+      </property>
+     </column>
+    </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout">
+     <property name="spacing">
+      <number>6</number>
+     </property>
+     <property name="margin">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="QPushButton" name="m_cmdDelete">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>40</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>40</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="m_cmdProperties">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>40</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>40</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="m_cmdSpeedwalk">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>40</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>40</width>
+         <height>40</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="Spacer1">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Expanding</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
+   </item>
+  </layout>
+ </widget>
+ <layoutdefault spacing="6" margin="11"/>
+ <pixmapfunction>Icon</pixmapfunction>
+ <customwidgets>
+  <customwidget>
+   <class>Q3Frame</class>
+   <extends>QFrame</extends>
+   <header>Qt3Support/Q3Frame</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>Q3ListView</class>
+   <extends>Q3Frame</extends>
+   <header>q3listview.h</header>
+  </customwidget>
+ </customwidgets>
+ <resources/>
+ <connections>
+  <connection>
+   <sender>m_cmdProperties</sender>
+   <signal>clicked()</signal>
+   <receiver>DlgMapSpeedwalkListBase</receiver>
+   <slot>slotProperties()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>m_cmdSpeedwalk</sender>
+   <signal>clicked()</signal>
+   <receiver>DlgMapSpeedwalkListBase</receiver>
+   <slot>slotWalk()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>m_cmdDelete</sender>
+   <signal>clicked()</signal>
+   <receiver>DlgMapSpeedwalkListBase</receiver>
+   <slot>slotDelete()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>m_lstSpeedwalk</sender>
+   <signal>doubleClicked(Q3ListViewItem*)</signal>
+   <receiver>DlgMapSpeedwalkListBase</receiver>
+   <slot>slotDoubleClicked(Q3ListViewItem*)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>m_lstSpeedwalk</sender>
+   <signal>rightButtonClicked(Q3ListViewItem*,QPoint,int)</signal>
+   <receiver>DlgMapSpeedwalkListBase</receiver>
+   <slot>slotRightButtonClicked(Q3ListViewItem*,QPoint,int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>m_cboCategorize</sender>
+   <signal>activated(int)</signal>
+   <receiver>DlgMapSpeedwalkListBase</receiver>
+   <slot>slotCatogryChanged(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
