--- a/plugins/mapper/dialogs/dlgmapinfobase.ui
+++ b/plugins/mapper/dialogs/dlgmapinfobase.ui
@@ -53,7 +53,7 @@
         <item row="0" column="1">
          <widget class="QLabel" name="txtMud">
           <property name="text">
-           <string>Test Mud</string>
+           <string/>
           </property>
           <property name="wordWrap">
            <bool>false</bool>
@@ -63,7 +63,7 @@
         <item row="1" column="1">
          <widget class="QLabel" name="txtChar">
           <property name="text">
-           <string>Slayer</string>
+           <string/>
           </property>
           <property name="wordWrap">
            <bool>false</bool>
@@ -261,31 +261,8 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="1">
-           <widget class="QLabel" name="txtZone">
-            <property name="maximumSize">
-             <size>
-              <width>40</width>
-              <height>32767</height>
-             </size>
-            </property>
-            <property name="wordWrap">
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
           <item row="1" column="1">
            <widget class="QLabel" name="txtY">
-            <property name="wordWrap">
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="0">
-           <widget class="QLabel" name="lblZone">
-            <property name="text">
-             <string>Zone:</string>
-            </property>
             <property name="wordWrap">
              <bool>false</bool>
             </property>
