--- a/plugins/mapper/dialogs/dlgmappathpropertiesbase.ui
+++ b/plugins/mapper/dialogs/dlgmappathpropertiesbase.ui
@@ -37,7 +37,7 @@
         <number>6</number>
        </property>
        <item row="0" column="0">
-        <widget class="Q3ButtonGroup" name="grdExits">
+        <widget class="QGroupBox" name="grdExits">
          <property name="title">
           <string>Exit Details</string>
          </property>
@@ -793,18 +793,6 @@
  </widget>
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
  <customwidgets>
-  <customwidget>
-   <class>Q3GroupBox</class>
-   <extends>QGroupBox</extends>
-   <header>Qt3Support/Q3GroupBox</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>Q3ButtonGroup</class>
-   <extends>Q3GroupBox</extends>
-   <header>Qt3Support/Q3ButtonGroup</header>
-   <container>1</container>
-  </customwidget>
  </customwidgets>
  <resources/>
  <connections>
