Finish porting plugins away from kde4support, everything now compiles.

--- a/plugins/mapper/dialogs/dlgmapspeedwalkbase.ui
+++ b/plugins/mapper/dialogs/dlgmapspeedwalkbase.ui
@@ -58,7 +58,7 @@
          </widget>
         </item>
         <item>
-         <widget class="KIntNumInput" name="txtAbortCount">
+         <widget class="QSpinBox" name="txtAbortCount">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
             <horstretch>0</horstretch>
@@ -123,7 +123,7 @@
        </widget>
       </item>
       <item>
-       <widget class="KIntNumInput" name="txtDelay">
+       <widget class="QSpinBox" name="txtDelay">
         <property name="minimumSize">
          <size>
           <width>100</width>
@@ -175,13 +175,6 @@
    </item>
   </layout>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>KIntNumInput</class>
-   <extends>QWidget</extends>
-   <header>knuminput.h</header>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
